syntax = "proto3";

package dk.via.slaughterhouse.protobuf.animalpart;
option java_multiple_files = true;

service AnimalPartService {
  rpc createAnimalPart(CreateAnimalPartRequest) returns (CreateAnimalPartResponse);
  rpc getAnimalPart(GetAnimalPartRequest) returns (GetAnimalPartResponse);
}

message CreateAnimalPartRequest {
  double weight = 1;
  int64 animalId = 2;
  int64 animalPartTypeId = 3;
  int64 trayId = 4;
  int64 productId = 5;
}

message CreateAnimalPartResponse {
  string confirmation = 1;
}

message GetAnimalPartRequest {
  int64 id = 1;
}

message GetAnimalPartResponse {
  int64 id = 1;
  double weight = 2;
  int64 animalId = 3;
}